# netwhy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
docs/: compare.schema.json  design.md  error.schema.json  output-contract.md  plugin-protocol.md  plugin.schema.json  product.md  release-checklist.md  report.schema.json  v0.2-release-checklist.md
packaging/: build-homebrew-formula.sh  build-linux-packages.sh  debian-control.in  netwhy.rb.in  netwhy.spec.in  test-packaging.sh
src/: cli.rs  command.rs  compare.rs  container_context.rs  diagnosis.rs  lib.rs  main.rs  model.rs  output.rs  plugin.rs  process_context.rs  proxy.rs  redaction.rs  target.rs
src/probe/: application.rs  dns.rs  mod.rs  path.rs  route.rs  tcp.rs
tests/: cli.rs  pipeline.rs
tests/fixtures/tls/: localhost-cert.pem  localhost-key.pem
